# SLAM_now

./: CMakeLists.txt  now.kdev4  评估结果(仅图像去畸变).odt
.kdev4/: now.kdev4
config/: default.yaml
include/myslam/: camera.h  frame.h  g2o_edgetypes.h  map.h  mappoint.h  process_info.h  visual_odometry.h
ok/: data.txt  norm_pose6d  num_of_inliers
ontok/: data.txt  norm_pose6d  num_of_inliers
src/: CMakeLists.txt  camera.cpp  frame.cpp  map.cpp  mappoint.cpp  process_info.cpp  visual_odometry.cpp
test/: .CMakeLists.txt.swp  CMakeLists.txt  run_vo.cpp
